third_party/WebKit/Source/core/layout/svg/LayoutSVGBlock.cpp
@@ -69,7 +69,7 @@ void LayoutSVGBlock::styleDidChange(StyleDifference diff, const ComputedStyle* o
 {
     if (diff.needsFullLayout()) {
         setNeedsBoundariesUpdate();
-        if (style()->hasTransform())
+        if (diff.transformChanged())
             setNeedsTransformUpdate();
     }
 
