third_party/WebKit/Source/core/layout/svg/LayoutSVGModelObject.cpp
@@ -104,7 +104,7 @@ void LayoutSVGModelObject::styleDidChange(StyleDifference diff, const ComputedSt
 {
     if (diff.needsFullLayout()) {
         setNeedsBoundariesUpdate();
-        if (style()->hasTransform())
+        if (diff.transformChanged())
             setNeedsTransformUpdate();
     }
 
